// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`marginRegistry PTB snapshots > allowedMaintainers 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "allowed_maintainers",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > allowedPauseCaps 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "allowed_pause_caps",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > baseMarginPoolId 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "base_margin_pool_id",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > getDeepbookPoolMarginPoolIds 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "get_deepbook_pool_margin_pool_ids",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > getMarginManagerIds 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "get_margin_manager_ids",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3q0=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > getMarginPoolId 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "get_margin_pool_id",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > liquidationRiskRatio 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "liquidation_risk_ratio",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > minBorrowRiskRatio 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "min_borrow_risk_ratio",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > minOpenRiskRatio 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "min_open_risk_ratio",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > minWithdrawRiskRatio 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "min_withdraw_risk_ratio",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > poolEnabled 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "pool_enabled",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > poolLiquidationReward 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "pool_liquidation_reward",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > quoteMarginPoolId 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "quote_margin_pool_id",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > targetLiquidationRiskRatio 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "target_liquidation_risk_ratio",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginRegistry PTB snapshots > userLiquidationReward 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "user_liquidation_reward",
        "module": "margin_registry",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "HBk2LKUrj/16M87oBaZ9QPMea6MDdT/TpM/frOpxY6U=",
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > addConditionalOrder 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "new_condition",
        "module": "tpsl",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 5,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 6,
            "type": "pure",
          },
        ],
        "function": "new_pending_market_order",
        "module": "tpsl",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 7,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 8,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 9,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 10,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 11,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 12,
            "type": "pure",
          },
          {
            "$kind": "Result",
            "Result": 0,
          },
          {
            "$kind": "Result",
            "Result": 1,
          },
          {
            "$kind": "Input",
            "Input": 13,
            "type": "object",
          },
        ],
        "function": "add_conditional_order",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQAAAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AA==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1ebb295c789cc42b3b2a1606482cd1c7124076a0f5676718501fda8c7fd075a0",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x9c4dd4008297ffa5e480684b8100ec21cc934405ed9a25d4e4d7b6259aad9c81",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQAAAAAAAAA=",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > cancelAllConditionalOrders 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
        ],
        "function": "cancel_all_conditional_orders",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > cancelConditionalOrder 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
        ],
        "function": "cancel_conditional_order",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQAAAAAAAAA=",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > conditionalOrder 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "conditional_order",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQAAAAAAAAA=",
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > conditionalOrderIds 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "conditional_order_ids",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > executeConditionalOrders 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 5,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 6,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 7,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 8,
            "type": "object",
          },
        ],
        "function": "execute_conditional_orders_v2",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0xcdbbe6a72e639b647296788e2e4b1cac5cea4246028ba388ba1332ff9a382eea",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0xf08568da93834e1ee04f09902ac7b1e78d3fdf113ab4d2106c7265e95318b14d",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1ebb295c789cc42b3b2a1606482cd1c7124076a0f5676718501fda8c7fd075a0",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x9c4dd4008297ffa5e480684b8100ec21cc934405ed9a25d4e4d7b6259aad9c81",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQAAAAAAAAA=",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > executeConditionalOrdersV3 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 5,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 6,
            "type": "object",
          },
          {
            "$kind": "Input",
            "Input": 7,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 8,
            "type": "object",
          },
        ],
        "function": "execute_conditional_orders_v3",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1c19362ca52b8ffd7a33cee805a67d40f31e6ba303753fd3a4cfdfacea7163a5",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0xcdbbe6a72e639b647296788e2e4b1cac5cea4246028ba388ba1332ff9a382eea",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0xf08568da93834e1ee04f09902ac7b1e78d3fdf113ab4d2106c7265e95318b14d",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x1ebb295c789cc42b3b2a1606482cd1c7124076a0f5676718501fda8c7fd075a0",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x9c4dd4008297ffa5e480684b8100ec21cc934405ed9a25d4e4d7b6259aad9c81",
      },
    },
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x48d7640dfae2c6e9ceeada197a7a1643984b5a24c55a0c6c023dac77e0339f75",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQAAAAAAAAA=",
      },
    },
    {
      "$kind": "Object",
      "Object": {
        "$kind": "SharedObject",
        "SharedObject": {
          "initialSharedVersion": 1,
          "mutable": false,
          "objectId": "0x0000000000000000000000000000000000000000000000000000000000000006",
        },
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > highestTriggerBelowPrice 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "highest_trigger_below_price",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > lowestTriggerAbovePrice 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "object",
          },
        ],
        "function": "lowest_trigger_above_price",
        "module": "margin_manager",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [
          "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI",
          "0xf7152c05930480cd740d7311b5b8b45c6f488e3a53a11c3f74a6fac36a52e0d7::DBUSDC::DBUSDC",
        ],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "UnresolvedObject",
      "UnresolvedObject": {
        "objectId": "0x2222222222222222222222222222222222222222222222222222222222222222",
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > newCondition 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
        ],
        "function": "new_condition",
        "module": "tpsl",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > newPendingLimitOrder 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 5,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 6,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 7,
            "type": "pure",
          },
        ],
        "function": "new_pending_limit_order",
        "module": "tpsl",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQAAAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AA==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AA==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "QEIPAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "mZmZmZmZmRk=",
      },
    },
  ],
}
`;

exports[`marginTPSL PTB snapshots > newPendingMarketOrder 1`] = `
{
  "commands": [
    {
      "$kind": "MoveCall",
      "MoveCall": {
        "arguments": [
          {
            "$kind": "Input",
            "Input": 0,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 1,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 2,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 3,
            "type": "pure",
          },
          {
            "$kind": "Input",
            "Input": 4,
            "type": "pure",
          },
        ],
        "function": "new_pending_market_order",
        "module": "tpsl",
        "package": "0xe52c1dece2bb5d5645689d6da8b8debe8347e3446011704a4fcb386746876580",
        "typeArguments": [],
      },
    },
  ],
  "inputs": [
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQAAAAAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AA==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AMqaOwAAAAA=",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
    {
      "$kind": "Pure",
      "Pure": {
        "bytes": "AQ==",
      },
    },
  ],
}
`;
